--- a/css/creative.css
+++ b/css/creative.css
@@ -10728,7 +10728,7 @@ header.masthead h1 {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  width: 100%;
+  width: auto !important;
   height: 100%;
   position: absolute;
   bottom: 0;
